# reachy-rx

./: .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  VOICE_TESTING.md  agora_voice_agent.py  agora_voice_test.html  macbook_camera.py  main.py  medication_reminder.py  minimax_tts.py  pyproject.toml  sounds.py  start_reachy_full.sh  system_prompt.md  vlm_client.py  vlm_client_lmstudio.py  vlm_client_openai.py
reachy-mini-agora-web-sdk/: .gitignore  README.md  README_CN.md  agent_config.json  agent_config.local_ollama.example.json  prompt.txt  pyproject.toml
reachy-mini-agora-web-sdk/docs/: OLLAMA_SETUP.md  VISION_VLM_IMPLEMENTATION_PLAN.md
reachy-mini-agora-web-sdk/scripts/: ollama_openai_proxy.py
reachy-mini-agora-web-sdk/src/reachy_mini_agora_web_sdk/: agent_manager.py  main.py  moves.py  token_builder.py  web_datastream_processor.py  web_motion_bridge.py  web_rtc_server.py  web_session_service.py
reachy-mini-agora-web-sdk/src/reachy_mini_agora_web_sdk/audio/: head_wobbler.py  speech_tapper.py
reachy-mini-agora-web-sdk/src/reachy_mini_agora_web_sdk/tools/: __init__.py  core_tools.py  dance.py  head_tracking.py  move_head.py  play_emotion.py  stop_dance.py  stop_emotion.py
reachy-mini-agora-web-sdk/src/reachy_mini_agora_web_sdk/vision/: __init__.py  ollama_vlm.py
reachy-mini-agora-web-sdk/static/web_rtc/: app.js  index.html  styles.css
tts/: __init__.py  client.py  index.html  package-lock.json  package.json  server.js
